<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ddlActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/sousuoneirong"
            android:inputType="text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/ddl_sousuotishi"
            android:autofillHints="" />

        <Button
            android:id="@+id/sousuobutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="sousuo"
            android:text="@string/ddl_sousuo" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/buttonTianjia"
            android:onClick="tianjia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ddl_tianjia" />

        <Button
            android:id="@+id/buttonshuaxin"
            android:onClick="shuaxinbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ddl_shuaxin" />

        <ListView
            android:id="@+id/ddlshixiang"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
</LinearLayout>